--- a/success.html
+++ b/success.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Payment Successful</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Sans&display=swap" rel="stylesheet">
-<style>
-body { font-family:'Noto Sans', sans-serif; background:#f9f9f9; text-align:center; padding:50px; color:#333; }
-h1 { font-family:'Montserrat', sans-serif; color:#4CAF50; font-size:2.5rem; margin-bottom:20px; }
-p { font-size:1.2rem; color:#666; }
-a { display:inline-block; margin-top:30px; padding:12px 25px; background:#2196F3; color:white; text-decoration:none; border-radius:10px; font-size:1.1rem; }
-a:hover { background:#1976D2; }
-</style>
+  <meta charset="UTF-8">
+  <title>Payment Successful - FuturesMove VIP</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      font-size: 48px;
+      color: #00bfff;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 22px;
+      color: #ccc;
+      margin-bottom: 30px;
+    }
+    a.button {
+      padding: 15px 35px;
+      font-size: 18px;
+      background: #fff;
+      color: #000;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: 0.3s;
+    }
+    a.button:hover {
+      background: #00bfff;
+      color: #fff;
+    }
+  </style>
 </head>
 <body>
-
-<h1>✅ Payment Successful!</h1>
-<p>Thank you for your payment. Check your email for your 30-day VIP Discord invite link!</p>
-<a href="index.html">Back to Membership Page</a>
-
+  <h1>✅ Payment Successful!</h1>
+  <p>Thank you for joining FuturesMove VIP. Check your email for your 30-day Discord invite link and start your journey!</p>
+  <a href="https://discord.com/channels/@me" target="_blank" class="button">Go to Discord</a>
 </body>
 </html>
