--- a/index.html
+++ b/index.html
@@ -1,158 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>FuturesMove VIP Access</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-  <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background-color: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      padding: 20px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-      letter-spacing: 1px;
-    }
-    p.subtitle {
-      font-size: 20px;
-      margin-bottom: 40px;
-      color: #ccc;
-    }
-    .tiers {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: center;
-      margin-bottom: 30px;
-    }
-    .card {
-      background: #111;
-      padding: 30px;
-      border-radius: 15px;
-      width: 220px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      border: 2px solid #fff;
-    }
-    .card:hover {
-      transform: translateY(-10px);
-      background: #222;
-      border-color: #00bfff;
-    }
-    .card h2 {
-      font-size: 28px;
-      margin-bottom: 10px;
-      color: #fff;
-    }
-    .card p {
-      font-size: 18px;
-      margin-bottom: 20px;
-      color: #ccc;
-    }
-    .card button {
-      padding: 12px 25px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background: #fff;
-      color: #000;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .card button:hover {
-      background: #00bfff;
-      color: #fff;
-    }
-    .patreon-link {
-      font-size: 18px;
-      color: #fff;
-      text-decoration: underline;
-      margin-top: 20px;
-      display: inline-block;
-      transition: 0.3s;
-    }
-    .patreon-link:hover {
-      color: #ff424d;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FuturesMove VIP</title>
+<style>
+  body {
+    margin:0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #000;
+    color: #fff;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    padding: 2rem;
+  }
+  h1 {
+    font-size:2.5rem;
+    margin-bottom:2rem;
+  }
+  .tier-card {
+    border: 1px solid #fff;
+    padding:2rem;
+    margin:1rem;
+    width:90%;
+    max-width:400px;
+    border-radius:12px;
+  }
+  input[type="email"] {
+    width:80%;
+    padding:0.5rem;
+    margin-bottom:1rem;
+    border-radius:8px;
+    border:1px solid #fff;
+    background:#000;
+    color:#fff;
+  }
+  .btn {
+    display:block;
+    width:80%;
+    margin:0.5rem auto;
+    padding:0.7rem;
+    font-size:1rem;
+    font-weight:bold;
+    border:none;
+    border-radius:10px;
+    cursor:pointer;
+  }
+  .btn-patreon { background-color:#e85f5c; color:#fff; }
+  .btn-crypto { background-color:#fff; color:#000; }
+</style>
 </head>
 <body>
-  <h1>FuturesMove VIP Access</h1>
-  <p class="subtitle">Choose your tier or support via Patreon. Join the elite community now!</p>
 
-  <div class="tiers">
-    <div class="card" id="chill-trader">
-      <h2>Chill Trader</h2>
-      <p>$39.99 / month</p>
-      <button>Pay with Crypto</button>
-    </div>
+<h1>Join VIP</h1>
 
-    <div class="card" id="savage">
-      <h2>Savage</h2>
-      <p>$89.99 / month</p>
-      <button>Pay with Crypto</button>
-    </div>
-  </div>
+<!-- Chill Tier -->
+<div class="tier-card">
+  <h2>Chill Trader Tier - $39.99</h2>
+  <p>Access to Chill channels</p>
+  <input type="email" id="emailChill" placeholder="Enter your email" required>
+  <button class="btn btn-patreon" onclick="patreonChill()">Pay with Patreon</button>
+  <button class="btn btn-crypto" onclick="cryptoChill()">Pay with Crypto</button>
+</div>
 
-  <a href="https://www.patreon.com/FuturesMove/membership?view_as=patron" target="_blank" class="patreon-link">Or support via Patreon</a>
+<!-- Savage Tier -->
+<div class="tier-card">
+  <h2>Savage Trader Tier - $89.99</h2>
+  <p>Access to Savage video + all Chill channels</p>
+  <input type="email" id="emailSavage" placeholder="Enter your email" required>
+  <button class="btn btn-patreon" onclick="patreonSavage()">Pay with Patreon</button>
+  <button class="btn btn-crypto" onclick="cryptoSavage()">Pay with Crypto</button>
+</div>
 
-  <script>
-    const API_KEY = "oYvslQg7QQ2CN7ZKRbdccM0JYFWqYjHg";
-    const API_SECRET = "jpDNhnU8S1fPN9f8oxw0rQfn5S9bg3Zz";
-    const REDIRECT_SUCCESS = "https://elmaster8.github.io/futuresmoves-landing-vip-crypto-patreon-/success.html";
-    const REDIRECT_CANCEL = "https://elmaster8.github.io/futuresmoves-landing-vip-crypto-patreon-/cancel.html";
-    const WEBHOOK_URL = "https://YOUR_PIPEDREAM_WEBHOOK_URL"; // Replace with your webhook
-
-    async function createMaxelPayLink(amount, tierName, email="user@example.com") {
-      const payload = {
-        orderID: "FM-" + Math.floor(Math.random() * 1000000),
-        amount: amount.toString(),
-        currency: "USD",
-        timestamp: Math.floor(Date.now() / 1000).toString(),
-        userName: tierName,
-        siteName: "FuturesMove",
-        userEmail: email,
-        redirectUrl: REDIRECT_SUCCESS,
-        websiteUrl: "https://elmaster8.github.io/futuresmoves-landing-vip-crypto-patreon-/",
-        cancelUrl: REDIRECT_CANCEL,
-        webhookUrl: WEBHOOK_URL
-      };
-
-      const encrypted = CryptoJS.AES.encrypt(JSON.stringify(payload), API_SECRET).toString();
-
-      const response = await fetch("https://api.maxelpay.com/v1/prod/merchant/order/checkout", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "X-API-KEY": API_KEY
-        },
-        body: JSON.stringify({ payload: encrypted })
-      });
-
-      const data = await response.json();
-      return data.checkoutUrl; // MaxelPay link
+<script>
+  // Links
+  const links = {
+    chill: {
+      patreon: "https://www.patreon.com/checkout/FuturesMove?rid=26419838",
+      crypto: "https://nowpayments.io/payment/?iid=5786117795",
+      discordWebhook: "https://discord.com/api/webhooks/1424444258298888352/GiQRqdljPhQ6OIXSLhV1fOjINxVH4dh8UQZvWNNlr4Qa93Cr4odhGkCqsDxIWZl-2YCk",
+      discordInvite: "Patreon handles invite"
+    },
+    savage: {
+      patreon: "https://www.patreon.com/checkout/FuturesMove?rid=26738115",
+      crypto: "https://nowpayments.io/payment/?iid=5441390811",
+      discordWebhook: "https://discord.com/api/webhooks/1424444258298888352/GiQRqdljPhQ6OIXSLhV1fOjINxVH4dh8UQZvWNNlr4Qa93Cr4odhGkCqsDxIWZl-2YCk",
+      discordInvite: "https://discord.gg/YnkPA52Hv6"
     }
+  };
 
-    document.getElementById("chill-trader").addEventListener("click", async () => {
-      const link = await createMaxelPayLink(39.99, "Chill Trader");
-      window.location.href = link;
+  function patreonChill() {
+    const email = document.getElementById('emailChill').value.trim();
+    if(!email) return alert("Enter your email");
+    fetch(links.chill.discordWebhook,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({content:`💸 Patreon Chill payment initiated\nEmail: ${email}`})
     });
+    window.open(links.chill.patreon, '_blank');
+  }
 
-    document.getElementById("savage").addEventListener("click", async () => {
-      const link = await createMaxelPayLink(89.99, "Savage");
-      window.location.href = link;
+  function cryptoChill() {
+    const email = document.getElementById('emailChill').value.trim();
+    if(!email) return alert("Enter your email");
+    fetch(links.chill.discordWebhook,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({content:`💸 Crypto Chill payment link clicked\nEmail: ${email}\nPayment link: ${links.chill.crypto}`})
     });
-  </script>
+    window.open(links.chill.crypto,'_blank');
+  }
+
+  function patreonSavage() {
+    const email = document.getElementById('emailSavage').value.trim();
+    if(!email) return alert("Enter your email");
+    fetch(links.savage.discordWebhook,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({content:`💸 Patreon Savage payment initiated\nEmail: ${email}\nInvite: ${links.savage.discordInvite}`})
+    });
+    window.open(links.savage.patreon, '_blank');
+  }
+
+  function cryptoSavage() {
+    const email = document.getElementById('emailSavage').value.trim();
+    if(!email) return alert("Enter your email");
+    fetch(links.savage.discordWebhook,{
+      method:'POST',
+      headers:{'Content-Type':'application/json'},
+      body:JSON.stringify({content:`💸 Crypto Savage payment link clicked\nEmail: ${email}\nPayment link: ${links.savage.crypto}\nInvite: ${links.savage.discordInvite}`})
+    });
+    window.open(links.savage.crypto,'_blank');
+  }
+</script>
+
 </body>
 </html>
