--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       background-color: #0d0d0d;
       color: #f2f2f2;
     }
-
     header {
       text-align: center;
       padding: 60px 20px 20px;
@@ -20,24 +19,18 @@
     }
     header h1 {
       font-weight: 800;
-      font-size: 2.2rem;
+      font-size: 2rem;
       color: #fff;
     }
     header span {
       color: #bfbfbf;
     }
-    header p {
-      color: #bfbfbf;
-      margin-top: 10px;
-    }
-
     main {
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 40px 20px;
     }
-
     .email-input {
       margin-bottom: 40px;
       text-align: center;
@@ -51,8 +44,11 @@
       color: #fff;
       outline: none;
       text-align: center;
+      transition: border 0.3s;
     }
-
+    .email-input input:focus {
+      border: 1px solid #bfbfbf;
+    }
     .tier-container {
       max-width: 900px;
       width: 100%;
@@ -61,7 +57,6 @@
       gap: 30px;
       margin-bottom: 60px;
     }
-
     .tier {
       background: #1a1a1a;
       border: 1px solid #333;
@@ -70,49 +65,52 @@
       text-align: center;
       transition: all 0.3s ease;
     }
-
     .tier:hover {
       background: #262626;
+      box-shadow: 0 8px 20px rgba(255,255,255,0.05);
       transform: translateY(-5px);
     }
-
     .tier h2 {
       margin: 10px 0;
       font-weight: 600;
       color: #fff;
-      font-size: 1.5rem;
     }
-
     .tier p {
       color: #bfbfbf;
       font-size: 0.95rem;
       margin: 10px 0 20px;
     }
-
     .tier .price {
       font-size: 1.2rem;
       color: #e6e6e6;
       margin-bottom: 20px;
     }
-
     .tier a {
       display: inline-block;
       text-decoration: none;
-      color: #fff;
-      background: #000;
-      border: 1px solid #fff;
       padding: 12px 25px;
       border-radius: 8px;
       font-weight: 600;
-      transition: 0.3s;
+      transition: all 0.3s ease;
       margin-bottom: 10px;
+      color: #fff;
     }
-
-    .tier a:hover {
-      background: #fff;
+    .chill {
+      background: #c0c0c0; /* platinum grey */
+      border: 1px solid #e0e0e0;
+    }
+    .chill:hover {
+      background: #e0e0e0;
       color: #000;
     }
-
+    .savage {
+      background: #0a0a0a; /* guardian black */
+      border: 1px solid #222;
+    }
+    .savage:hover {
+      background: #222;
+      color: #fff;
+    }
     .confirmation {
       background-color: #0d0d0d;
       text-align: center;
@@ -120,24 +118,20 @@
       border-top: 1px solid #222;
       border-bottom: 1px solid #222;
     }
-
     .confirmation h2 {
       font-size: 1.6rem;
       margin-bottom: 15px;
       color: #fff;
     }
-
     .confirmation p {
       font-size: 1rem;
       color: #bfbfbf;
       margin: 5px 0;
     }
-
     footer {
       text-align: center;
       padding: 40px 20px;
     }
-
     footer a {
       color: #fff;
       text-decoration: none;
@@ -148,90 +142,85 @@
       margin: 5px;
       transition: 0.3s;
     }
-
     footer a:hover {
       background-color: #fff;
       color: #000;
-    }
-
-    @media (max-width: 600px) {
-      .email-input input {
-        width: 90%;
-      }
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1><strong>FuturesMove</strong> <span>VIP Access</span></h1>
-    <p>Join the exclusive trading community that sharpens your edge.</p>
-  </header>
+<header>
+  <h1><strong>FuturesMove</strong> <span>VIP Access</span></h1>
+  <p>Join the exclusive trading community that sharpens your edge.</p>
+</header>
 
-  <main>
-    <div class="email-input">
-      <input type="email" id="userEmail" placeholder="Enter your email to receive your invite" required>
+<main>
+  <div class="email-input">
+    <input type="email" id="userEmail" placeholder="Enter your email to receive your invite" required>
+  </div>
+
+  <div class="tier-container">
+    <div class="tier">
+      <h2>❄️ Chill Trader</h2>
+      <p>Access to <strong>#mindset-and-risk</strong> and <strong>#vip-signal</strong> channels.</p>
+      <p class="price">$39.99 / month</p>
+      <a href="#" class="chill" onclick="triggerGate('Chill Trader', 'Patreon', 'https://www.patreon.com/checkout/FuturesMove?rid=26419838')">Join via Patreon</a>
+      <a href="#" class="chill" onclick="triggerGate('Chill Trader', 'Crypto', 'https://nowpayments.io/payment/?iid=5786117795')">Join via Crypto</a>
     </div>
 
-    <div class="tier-container">
-      <div class="tier">
-        <h2>💼 Chill Trader</h2>
-        <p>Access <strong>#mindset-and-risk</strong> and <strong>#vip-signal</strong> channels.</p>
-        <p class="price">$39.99 / month</p>
-        <a href="#" onclick="sendAlert('Chill Trader', 'Patreon', 'https://www.patreon.com/checkout/FuturesMove?rid=26419838', 'https://discord.gg/3MBd6mRSvC')">Join via Patreon</a>
-        <a href="#" onclick="sendAlert('Chill Trader', 'Crypto', 'https://nowpayments.io/payment/?iid=5786117795', 'https://discord.gg/3MBd6mRSvC')">Join via Crypto</a>
-      </div>
-
-      <div class="tier">
-        <h2>🔥 Savage Trader</h2>
-        <p>Includes Chill access + <strong>#savage</strong> video calls (1h twice a week).</p>
-        <p class="price">$89.99 / month</p>
-        <a href="#" onclick="sendAlert('Savage Trader', 'Patreon', 'https://www.patreon.com/checkout/FuturesMove?rid=26738115', 'https://discord.gg/YnkPA52Hv6')">Join via Patreon</a>
-        <a href="#" onclick="sendAlert('Savage Trader', 'Crypto', 'https://nowpayments.io/payment/?iid=5441390811', 'https://discord.gg/YnkPA52Hv6')">Join via Crypto</a>
-      </div>
+    <div class="tier">
+      <h2>🔥 Savage Trader</h2>
+      <p>Includes Chill access + <strong>#savage</strong> video calls (1h twice a week).</p>
+      <p class="price">$89.99 / month</p>
+      <a href="#" class="savage" onclick="triggerGate('Savage Trader', 'Patreon', 'https://www.patreon.com/checkout/FuturesMove?rid=26738115')">Join via Patreon</a>
+      <a href="#" class="savage" onclick="triggerGate('Savage Trader', 'Crypto', 'https://nowpayments.io/payment/?iid=5441390811')">Join via Crypto</a>
     </div>
-  </main>
+  </div>
+</main>
 
-  <section class="confirmation">
-    <h2>✅ Payment in Progress</h2>
-    <p>After clicking a payment button, <strong>check your email</strong> for your VIP Discord invite link <em>only after payment is confirmed</em>.</p>
-    <p>🔗 Link valid for <strong>48 hours</strong> — Membership lasts <strong>30 days</strong>.</p>
-    <p>If you don’t receive an email within 15 minutes, please message us on Discord or Patreon.</p>
-  </section>
+<section class="confirmation">
+  <h2>✅ Payment in Progress</h2>
+  <p>After clicking a payment button, <strong>check your email</strong> for your Discord VIP invite link <em>only after payment is confirmed</em>.</p>
+  <p>🔗 Link valid for <strong>48 hours</strong> — Membership lasts <strong>30 days</strong>.</p>
+  <p>If you don’t receive an email within 15 minutes, please message us on Discord or Patreon.</p>
+</section>
 
-  <footer>
-    <p style="color: #bfbfbf;">Join the <strong>FuturesMove</strong> community:</p>
-    <a href="https://discord.gg/3MBd6mRSvC" target="_blank">💬 Discord</a>
-    <a href="https://www.reddit.com/r/Futuresmove/" target="_blank">🔥 Reddit</a>
-  </footer>
+<footer>
+  <p style="color: #bfbfbf;">Join the <strong>FuturesMove</strong> community:</p>
+  <a href="https://discord.gg/3MBd6mRSvC" target="_blank">💬 Discord</a>
+  <a href="https://www.reddit.com/r/Futuresmove/" target="_blank">🔥 Reddit</a>
+</footer>
 
-  <script>
-    const webhook = "https://discord.com/api/webhooks/1424444258298888352/GiQRqdljPhQ6OIXSLhV1fOjINxVH4dh8UQZvWNNlr4Qa93Cr4odhGkCqsDxIWZl-2YCk";
+<script>
+  const webhook = "https://discord.com/api/webhooks/1424444258298888352/GiQRqdljPhQ6OIXSLhV1fOjINxVH4dh8UQZvWNNlr4Qa93Cr4odhGkCqsDxIWZl-2YCk";
 
-    function sendAlert(tier, method, link, inviteLink) {
-      const email = document.getElementById('userEmail').value || "No email entered";
-
-      // Discord webhook notification
-      fetch(webhook, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          username: "Payment Gate",
-          embeds: [{
-            title: "💸 New Payment Attempt",
-            description: `**Tier:** ${tier}\n**Method:** ${method}\n**Email:** ${email}\n\nPlease verify payment in NOWPayments/Patreon dashboard before assigning role.`,
-            color: 3447003
-          }]
-        })
-      });
-
-      // Redirect to payment page after alert
-      setTimeout(() => {
-        window.open(link, "_blank");
-        alert("Check your email after payment is confirmed for your exclusive Discord VIP invite!");
-      }, 1000);
+  function triggerGate(tier, method, link) {
+    const email = document.getElementById('userEmail').value;
+    if(!email) {
+      alert("Please enter your email first!");
+      return;
     }
-  </script>
+
+    fetch(webhook, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        username: "Payment Gate",
+        embeds: [{
+          title: "💸 New Payment Attempt",
+          description: `**Tier:** ${tier}\n**Method:** ${method}\n**Email:** ${email}\n\nPlease verify payment before assigning role.`,
+          color: 3447003
+        }]
+      })
+    });
+
+    setTimeout(() => {
+      window.open(link, "_blank");
+      alert("Check your email after payment is confirmed for your VIP invite link!");
+    }, 1000);
+  }
+</script>
 
 </body>
 </html>
